<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">GoDairy</string>
    <string name="milk_sales_daily" translatable="false">GoDairy</string>
    <string name="milk_sales_check_in" translatable="false">GoDairy</string>
    <string name="milk_sales_franchise" translatable="false">GoDairy Distributor</string>
    <string name="milk_sales_locations" translatable="false">GoDairy Locations</string>
    <string name="loading_please_wait" translatable="false">Loading Please Wait......</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="sign_in" translatable="false">Sign-In</string>
    <string name="password" translatable="false">password</string>
    <string name="username" translatable="false">username</string>
    <string name="Currency" translatable="true">₹</string>
    <string name="MRPCAP" translatable="true">MRP</string>
    <string name="or" translatable="false">or</string>
    <string name="map_key" translatable="false">AIzaSyAER5hPywUW-5DRlyKJZEfsqgZlaqytxoU</string>
    <string name="txt_haplocations" translatable="false">Select the GoDairy locations <font fgcolor='#E53935'> *</font></string>
    <string name="txt_haplocationss" translatable="false">Select the GoDairy locations</string>
    <string name="txt_purpose" translatable="false">Enter the Purpose of visit<font fgcolor='#E53935'> *</font></string>
    <string name="txt_purposes" translatable="false">Enter the Purpose of visit</string>
    <string name="txt_ondutylocations" translatable="false">Enter your ON-Duty Location<font fgcolor='#E53935'> *</font></string>
    <string name="txt_ondutylocationss" translatable="false">Enter your ON-Duty Location</string>
    <string name="selectmissed_date" translatable="false">Select Missed Date</string>
    <string name="select_type" translatable="false">Select Type</string>
    <string name="enter_location" translatable="false">Enter location</string>
    <string name="web_client_id" translatable="false">92787437164-iv0q3cg155ve0a0pl21d4r6e6e295p09.apps.googleusercontent.com</string>
    <string name="launch_activity" translatable="false">open</string>
    <string name="location_updated" translatable="false">Updating</string>
    <string name="permission_rationale" translatable="false">Please Grant Location Permission</string>
    <string name="ok" translatable="false" tools:ignore="ButtonCase">Ok</string>
    <string name="permission_denied_explanation" translatable="false">Permission Denied</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="reason" translatable="false">Reason</string>
    <string name="txt_jointwork" translatable="false">Joint work</string>
    <string name="txt_enter_reason" translatable="false">Enter the Reason</string>
    <string name="Tourplan" translatable="false">Work  Plan</string>
    <string name="txt_worktype" translatable="false">Work Type</string>
    <string name="txt_distributors">Distributors</string>
    <string name="txt_route">Route</string>
    <string name="DayPlan">My Day  Plan</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_hq">Head Quarters</string>
    <string name="txt_chillingtext">Visiting Chilling Center</string>
    <string name="txt_shifttype">Shift M/E</string>
    <string name="txt_enter_purpose">Enter The Visiting Purpose</string>
    <string name="leave_type">Leave Type</string>
    <string name="shit_type">Shift Timing</string>
    <string name="half_day_type">Halfday Type</string>
    <string name="btnsummit">Submit For Approval</string>
    <string name="Rep_orders">Reports</string>
    <string name="pri_orders">Orders</string>
    <string name="order_type">Order Type</string>
    <string name="head_quater">Headquarters</string>
    <string name="route">Route  </string>
    <string name="retailer">Outlet Name </string>
    <string name="retailer_class">Outlet Class  </string>
    <string name="retailer_channel">Outlet Channel </string>
    <string name="event_capture">Event Capture</string>
    <string name="order">Orders</string>
    <string name="remark">Enter the Remarks </string>
    <string name="from_date">From :</string>
    <string name="to_date">To :</string>
    <string name="allowance">Do you want to submit Allowance?</string>
    <string name="title_activity_ta_approval_display">TaApprovalDisplay</string>
    <string name="take_photo">Photo</string>
    <string name="trv_exc_entry">Travel Mode Exception Entry</string>
    <string name="trv_exc_aprvl">Travel Mode Exception Approval</string>
    <string name="trv_exc_status">Travel Mode Exception Status</string>
    <string name="map_api_key">AIzaSyAER5hPywUW-5DRlyKJZEfsqgZlaqytxoU</string>
    <string name="dash">-</string>
    <string name="rs">\u20B9</string>
    <string name="outstanding_amt">Outstanding Amount</string>
    <string name="retailer_outstand_hint">Enter the Outstanding Amount</string>
    <string name="select_state">Select the State</string>
    <string name="select_distributor">Select the Distributor</string>
    <string name="select_route">Select the Route</string>
    <string name="projection_history">History &amp; Status </string>
    <string name="title_activity_posstock_loading">POSStockLoadingActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="customer_photo">Customer Photo<font fgcolor='#E53935'> *</font></string>
    <string name="shop_photo">Shop Photo<font fgcolor='#E53935'> *</font></string>
    <string name="region">TM! Reporting Verticals<font fgcolor='#E53935'> *</font></string>
    <string name="sales_office_code">Sales Office Code<font fgcolor='#E53935'> *</font></string>
    <string name="sales_office_name">Sales Office<font fgcolor='#E53935'> *</font></string>
    <string name="route_code">Route Code<font fgcolor='#E53935'> *</font></string>
    <string name="route_name">Route<font fgcolor='#E53935'> *</font></string>
    <string name="channel">Channel<font fgcolor='#E53935'> *</font></string>
    <string name="city">City<font fgcolor='#E53935'> *</font></string>
    <string name="postal_code_pincode">Postal Code (Pincode)<font fgcolor='#E53935'> *</font></string>
    <string name="state_code">State<font fgcolor='#E53935'> *</font></string>
    <string name="select_district">District<font fgcolor='#E53935'> *</font></string>
    <string name="name_of_the_customer">Business Name<font fgcolor='#E53935'> *</font></string>
    <string name="name_of_the_owner">Owner Name<font fgcolor='#E53935'> *</font></string>
    <string name="address_of_the_shop">Business Address<font fgcolor='#E53935'> *</font></string>
    <string name="residence_address">Owner Address<font fgcolor='#E53935'> *</font></string>
    <string name="mobile">Mobile Number<font fgcolor='#E53935'> *</font></string>
    <string name="email_id">Email Id</string>
    <string name="sales_executive_name">Sales Executive Name<font fgcolor='#E53935'> *</font></string>
    <string name="sales_executive_employee_id">Sales Executive - Employee ID<font fgcolor='#E53935'> *</font></string>
    <string name="erp_code">ERP Code<font fgcolor='#E53935'> *</font></string>
    <string name="div_code">Division Code<font fgcolor='#E53935'> *</font></string>
    <string name="sub_div_code">Subdivision Code<font fgcolor='#E53935'> *</font></string>
    <string name="date_of_creation">Date of Creation<font fgcolor='#E53935'> *</font></string>
    <string name="aadhaar_number">Aadhaar Number<font fgcolor='#E53935'> *</font></string>
    <string name="pan_number">PAN Number<font fgcolor='#E53935'> *</font></string>
    <string name="bank_details">Bank Details</string>
    <string name="fssai_certificate_applied_details">FSSAI Certificate / Declaration</string>
    <string name="gst_certificate_declaration">GST Certificate / Declaration<font fgcolor='#E53935'> *</font></string>
    <string name="agreement_copy">Agreement Copy</string>
    <string name="mode_of_payment">Mode of Payment<font fgcolor='#E53935'> *</font></string>
    <string name="security_deposit_details">Security Deposit Details<font fgcolor='#E53935'> *</font></string>
    <string name="security_deposit_details_image">Security Deposit Details Image<font fgcolor='#E53935'> *</font></string>
    <string name="submit">SUBMIT</string>
    <string name="pay_opt">Payment Option</string>
    <string name="card_type">Card Type</string>
    <string name="emi_banks">EMI Banks</string>
    <string name="emi_card_name">Card Name</string>
    <string name="diary_product_delivery_solutions">Dairy Product \n Delivery Solutions</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="request_amp_status"><![CDATA[Request & Status]]></string>
    <string name="canteen_scan">Canteen Scan</string>
    <string name="check_in">CHECK IN</string>
    <string name="lets_get_to_work">Lets get to work</string>
    <string name="today">Today</string>
    <string name="monthly">Monthly</string>
    <string name="gate_in_out">Gate IN/OUT</string>
    <string name="explore_more">Explore More</string>
    <string name="gate_in">Gate IN</string>
    <string name="gate_out">Gate OUT</string>
    <string name="sfa">SFA</string>
    <string name="ta_amp_claim"><![CDATA[TA & Claim]]></string>
    <string name="close">CLOSE</string>
    <string name="sub_channel">Sub Channel<font fgcolor='#E53935'> *</font></string>
    <string name="del_address">Delivery Address<font fgcolor='#E53935'> *</font></string>
    <string name="account_group">Account Group<font fgcolor='#E53935'> *</font></string>
    <string name="distributor_channel">Distributor Channel<font fgcolor='#E53935'> *</font></string>
    <string name="sales_division">Division<font fgcolor='#E53935'> *</font></string>
    <string name="selectSalesRegion">Regional Market<font fgcolor='#E53935'> *</font></string>
    <string name="selectBusinessType">Business Type<font fgcolor='#E53935'> *</font></string>
    <string name="select_company">Select Company</string>
    <string name="select_plant">Select Plant</string>
    <string name="back">back</string>
    <string name="save">SAVE</string>
    <string name="yes">Yes</string>
    <string name="procurement_asset">Procurement Asset</string>
    <string name="type_of_asset">Type of Asset</string>
    <string name="comments">Comments</string>
    <string name="procurement_form">Procurement form</string>
    <string name="logout">Logout</string>
    <string name="icon">Icon</string>
    <string name="form_reports">Form Reports</string>
    <string name="_1_agronomist_form">1, Agronomist Form</string>
    <string name="_2_ait_form">2, AIT Form</string>
    <string name="_3_veterinary_doctors_form">3, Veterinary-Doctors Form</string>
    <string name="_4_quality_form">4, Quality Form</string>
    <string name="_5_maintanence_regular_form">5, Maintanence-Regular Form</string>
    <string name="_6_existing_agent_visit">6, Existing Agent Visit</string>
    <string name="_7_collection_center_location">7, Collection Center Location</string>
    <string name="_8_procurement_asset">8, Procurement Asset</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="custom_form">Custom form</string>
    <string name="printer_settings">Printer Settings</string>
    <string name="x">X</string>
    <string name="select_paper_size">Select Paper Size</string>
    <string name="paper_size_58mm">Paper Size 58mm</string>
    <string name="paper_size_80mm">Paper Size 80mm</string>
    <string name="paper_size_102mm">Paper Size 102mm</string>
    <string name="go">Go</string>
</resources>