<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#008eff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#008eff"
                android:text="@string/printer_settings"
                android:textColor="@color/white"
                android:fontFamily="@font/ubuntu_medium"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:textColor="@color/white"
                android:fontFamily="@font/ubuntu_medium"
                android:textSize="20sp"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                />

            <RelativeLayout
                android:id="@+id/close"
                android:layout_width="@dimen/C50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:hint="@string/select_paper_size"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rb_size_58"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:padding="4dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/paper_size_58mm"
                android:textAlignment="center"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rb_size_80"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:padding="4dp"
                android:text="@string/paper_size_80mm"
                android:fontFamily="@font/ubuntu"
                android:textAlignment="center"
                android:textSize="15sp"
                android:value="checked"/>

            <RadioButton
                android:id="@+id/rb_size_102"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:padding="4dp"
                android:text="@string/paper_size_102mm"
                android:fontFamily="@font/ubuntu"
                android:textAlignment="center"
                android:textSize="15sp" />

        </RadioGroup>

        <Button
            android:id="@+id/print"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/blue_txt_bg"
            android:text="@string/go"
            android:fontFamily="@font/ubuntu"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>