<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".procurement.ProcurementAssetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:elevation="20dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/baseline_arrow_back_35"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/procurement_asset"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:layout_marginTop="10dp"
                android:text="@string/select_company"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_common"
                android:layout_marginTop="2dp">

                <com.saneforce.godairy.common.CustomSpinner
                    android:id="@+id/spinner_company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:layout_marginTop="10dp"
                android:text="@string/select_plant"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_common"
                android:layout_marginTop="2dp">

                <com.saneforce.godairy.common.CustomSpinner
                    android:id="@+id/spinner_plant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:layout_marginTop="10dp"
                android:text="@string/type_of_asset"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/type_of_asset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="@string/yes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/comments"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/ed_comments"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_common"
                android:fontFamily="@font/ubuntu"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:inputType="textMultiLine" />

        </LinearLayout>



        <Button
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/button_blue"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            tools:visibility="visible"
            tools:ignore="UnusedAttribute" />

</RelativeLayout>