<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="10dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_35"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/back"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/custom_form"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/null_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/null_error"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/something_went_wrong" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/ubuntu_medium"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/C20dp"/>
        </LinearLayout>


    </RelativeLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="51dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--add  several shimmer placeholder layout -->
            <include layout="@layout/m_agronomist_report_shimmer" />
            <include layout="@layout/m_agronomist_report_shimmer" />
            <include layout="@layout/m_agronomist_report_shimmer" />
            <include layout="@layout/m_agronomist_report_shimmer" />
            <include layout="@layout/m_agronomist_report_shimmer" />
            <include layout="@layout/m_agronomist_report_shimmer" />
            <include layout="@layout/m_agronomist_report_shimmer" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:padding="@dimen/C5dp"
        android:layout_marginStart="5dp"
        />

</RelativeLayout>